# claude-plugins

./: .claude-code-version-check.json  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .obsidian-cli-version-check.json  .pre-commit-config.yaml  .release-please-manifest.json  .shellcheckrc  CLAUDE.md  MIGRATION.md  PLAN-agent-consolidation.md  README.md  fix-check-docs-index.sh  justfile  release-please-config.json  renovate.json
git-repo-agent/: pyproject.toml
git-repo-agent/docs/adr/: 006-blueprint-state-machine-driver.md
git-repo-agent/scripts/: compile_prompts.py
git-repo-agent/src/git_repo_agent/: blueprint_driver.py  main.py  orchestrator.py
git-repo-agent/src/git_repo_agent/prompts/: compiler.py  maintain.md  orchestrator.md
git-repo-agent/src/git_repo_agent/tools/: stack_profile.py
git-repo-agent/tests/: test_blueprint_driver.py
vault-agent/: .gitignore  README.md  pyproject.toml
vault-agent/docs/adr/: 0001-precompute-vault-graph.md  0002-worktree-without-pr.md  0003-model-tier-per-mode.md  0004-safety-hooks-vault-paths.md  0005-skill-source-obsidian-plugin.md  0006-standalone-install-prompt-fallback.md
vault-agent/scripts/: compile_prompts.py
vault-agent/src/vault_agent/: __init__.py  config.py  links_mode.py  lint.py  main.py  maintain.py  mocs_mode.py  non_interactive.py  orchestrator.py  reporting.py  stubs_mode.py  worktree.py
vault-agent/src/vault_agent/agents/: __init__.py  _build.py  vault_links.py  vault_lint.py  vault_mocs.py  vault_stubs.py
vault-agent/src/vault_agent/analyzers/: __init__.py  audit.py  duplicates.py  frontmatter.py  graph.py  (+5 more)
vault-agent/tests/: test_analyzers.py  test_compiler.py  test_compiler_standalone.py  test_fixers.py  test_link_patcher.py  test_link_triage.py  test_links_mode.py  test_main_cli.py  test_moc_curation.py  test_non_interactive.py  test_orchestrator.py  test_orchestrator_sdk.py  test_safety.py  test_stub_merge_helpers.py  test_worktree.py
(+1702 files in other folders)
