[project]
name = "vault-agent"
version = "0.1.0"
description = "Claude Agent SDK app for Obsidian vault maintenance (tags, links, stubs, MOCs)."
readme = "README.md"
authors = [
    { name = "Lauri Gates", email = "lauri.gates@forumvirium.fi" }
]
requires-python = "==3.14.4"
dependencies = [
    "claude-agent-sdk==0.1.61",
    "python-frontmatter==1.1.0",
    "pyyaml==6.0.3",
    "rich==15.0.0",
    "typer==0.24.1",
]

[project.scripts]
vault-agent = "vault_agent.main:app"

[build-system]
requires = ["uv_build==0.10.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest==9.0.3",
]
